[styles] Fix share overlap on publications
(cherry picked from commit 6e7a473df3054a2e6e11d0ab1158fe4af73fcead)
(cherry picked from commit 13c12d748b9924ebd52673272e9b1798af8aaeaa)

--- a/assets/css/groups.css
+++ b/assets/css/groups.css
@@ -37,7 +37,7 @@
 	}
 	#group-owner .group-withlogo {
 		position: absolute;
-		bottom: 0;
+		top: 0;
 		left: 0;
 		width: 90.5%;
 		margin: 0;
